# src/api/controller/blog-controller/getBlogMyList.js
@@ -1,0 +1,7 @@
+import request from "@/plugins/myAxios.js";
+/**
+ * /blog/my/list
+ */
+export function getBlogMyList(config) {
+    return request.get(`/blog/my/list`, config);
+}
