# src/api/controller/index.js
@@ -2,3 +2,4 @@ export * from "./YongHuJieKou";
 export * from "./DuiWuJieKou";
 export * from "./blog-controller";
 export * from "./ZhanShiDuiWuChengYuanXinXi";
+export * from "./comment-controller";
