# src/api/interface/index.js
@@ -12,6 +12,11 @@ export * from "./apiTypes/BaseResponseListUser";
 export * from "./apiTypes/BaseResponseListUserVo";
 export * from "./apiTypes/UserVo";
 export * from "./apiTypes/BaseResponseListTeamDto";
-export * from "./apiTypes/BaseResponseListBlog";
-export * from "./apiTypes/Blog";
+export * from "./apiTypes/BaseResponseListCommentVo";
+export * from "./apiTypes/CommentVo";
+export * from "./apiTypes/BaseResponseUserComment";
+export * from "./apiTypes/UserComment";
+export * from "./apiTypes/BaseResponseListBlogVo";
+export * from "./apiTypes/BlogVo";
 export * from "./apiTypes/BaseResponseBlog";
+export * from "./apiTypes/Blog";
